incorporating Suzanne's comments and remaking final figures

--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -2935,3 +2935,20 @@ archivePrefix = "arXiv",
      year = 2004,
     month = Oct}
 }
+
+@ARTICLE{Brewer2009,
+   author = {{Brewer}, B.~J. and {Stello}, D.},
+    title = "{Gaussian process modelling of asteroseismic data}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0902.3907},
+ primaryClass = "astro-ph.SR",
+ keywords = {methods: statistical , stars: individual: {$\xi$}Hydrae , stars: oscillations},
+     year = 2009,
+    month = jun,
+   volume = 395,
+    pages = {2226-2233},
+      doi = {10.1111/j.1365-2966.2009.14679.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2009MNRAS.395.2226B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
