--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -641,8 +641,8 @@ These light curves result from placing dark, circular spots with slowly
 evolving size on the surface of bright, rotating spheres, ignoring
 limb-darkening effects.
 \citet{Aigrain2015} simulated one thousand such light curves to test the
-ability of participating teams to recover both the stellar rotation periods
-and the rotational shear (the amplitude of surface differential rotation).
+ability of participating teams to recover both stellar rotation periods
+and rotational shear (the amplitude of surface differential rotation).
 % Since we are not interested in recovering differential rotation we only used
 % those light curves simulated {\it without} differential rotation, of which
 % there are \naigraincurves.
@@ -665,7 +665,7 @@ angles, activity levels, spot lifetimes and more
 (see Table \ref{tab:simulation_parameters}).
 In order to preserve \kepler\ noise properties,
 \citet{Aigrain2015} add real \kepler\ light curves with no obvious astrophysical
-variability to the theoretical rotational modulated light curves.
+variability to the theoretical rotationally modulated light curves.
 Figure \ref{fig:demo_lc} shows an example of a simulated light curve with a
 period of \aigrainexampleperiod days.
 
