small changes to the text

--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -383,7 +383,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Dumusque_2011,
+@ARTICLE{Dumusque2011,
    author = {{Dumusque}, X. and {Santos}, N.~C. and {Udry}, S. and others},
     title = "{Planetary detection limits taking into account stellar noise. II. Effect of stellar spot groups on radial-velocities}",
   journal = {\aap},
