fix typo \tdm -> \tdmcomment

--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -1181,7 +1181,7 @@ Unlike the ACF and L-S periodogram methods, the GP method provides posterior
 PDF samples which can be used to estimate rotation periods uncertainties.
 Although an improvement on competing methods, these uncertainties are still
 underestimated in many cases because the GP model is an approximate, effective
-model. \tdm{Can we make a statement something like ``we believe the method underestimates
+model. \tdmcomment{Can we make a statement something like ``we believe the method underestimates
 uncertainties by about a factor of three'' or something like that?  This
 matches with 66\% of the fits being within ``3$\sigma''.
 Might be good to say something like this, both in the discussion and here.}
