--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -1183,7 +1183,7 @@ Although an improvement on competing methods, these uncertainties are still
 underestimated in many cases because the GP model is an approximate, effective
 model. \tdmcomment{Can we make a statement something like ``we believe the method underestimates
 uncertainties by about a factor of three'' or something like that?  This
-matches with 66\% of the fits being within ``3$\sigma''.
+matches with 66\% of the fits being within ``3$\sigma$''.
 Might be good to say something like this, both in the discussion and here.}
 % in many cases the posterior PDFs of the parameters are
 % multi-modal.
